--- a/tools/forGeany/filetypes.funcSug.conf
+++ b/tools/forGeany/filetypes.funcSug.conf
@@ -61,7 +61,7 @@ string2=#f80;#fff;false;false
 
 [keywords]
 # lexer C
-primary=await bool break case catch class const continue continuous default deffunc doOnce empty else ext false fetch finally float for foreach function if int integer isset let long namespace new null par prepContinuous return short spawn static string switch this throw true try typeof until var void while
+primary=await bool break case catch class const continue continuous default deffunc doOnce empty else ext false fetch finally float for foreach function if int integer isset let listen listener long namespace new null par par_race prepContinuous print return seq short spawn string switch this throw true try typeof until var void while
 
 # lexer C
 secondary=adapt beep bip play send
