--- a/tools/forGeany/filetypes.funcSug.conf
+++ b/tools/forGeany/filetypes.funcSug.conf
@@ -61,7 +61,7 @@ string2=#f80;#fff;false;false
 
 [keywords]
 # lexer C
-primary=await bool break case catch class const continue continuous default deffunc doOnce empty else ext false fetch finally float for foreach foreachPar function if int integer isset js let listen listener long namespace new null par par_race prepContinuous print return seq short spawn string switch syncjs this throw true try typeof until var void while whileTrue whileTrueAwaitDom_js whileTrueAwaitDom_translate whileTrueAwaitFrame
+primary=await bool break breakReturn case catch class const continue continuous default deffunc doOnce empty else export ext false fetch finally float for foreach foreach_race foreachPar function if import int integer isset js let listen listener long namespace new null par par_race pause prepContinuous print restart resume return separateMicrostep seq set short spawn splitMicrostep string switch syncjs this throw togglePause true try typeof until var void while whileTrue whileTrue_dependsOn whileTrueAwaitDom_js whileTrueAwaitDom_translate whileTrueAwaitFrame
 
 # lexer C
 secondary=adapt beep bip play send
