--- a/tools/forGeany/filetypes.funcSug.conf
+++ b/tools/forGeany/filetypes.funcSug.conf
@@ -61,10 +61,10 @@ string2=#f80;#fff;false;false
 
 [keywords]
 # lexer C
-primary=await bool break breakReturn case catch class const continue continuous default deffunc doOnce empty else export ext false fetch finally float for foreach foreach_race foreachPar function if import int integer isset js let listen listener long namespace new null par par_race pause prepContinuous print restart resume return separateMicrostep seq set short spawn splitMicrostep string switch syncjs this throw togglePause true try typeof until var void while whileTrue whileTrue_dependsOn whileTrueAwaitDom_js whileTrueAwaitDom_translate whileTrueAwaitFrame
+primary=await awaitBeep awaitBip blockCall0 blockCall1 blockCall2 bool break breakReturn case catch class const continue continuous default def doOnce empty else export ext false fetch finally float for foreach foreach_race foreachPar function if import int integer isset js let listen listener long namespace new null onBreak par par_race pause prepContinuous print repeat restart resume return separateMicrostep seq set short spawn splitMicrostep string switch syncjs this throw togglePause true try typeof until var varmul void while whileTrue whileTrue_dependsOn whileTrueAwaitDom_js whileTrueAwaitDom_translate whileTrueAwaitFrame
 
 # lexer C
-secondary=adapt beep bip play send
+secondary=adapt beep bip inside play send supplBranchBy
 
 # lexer Tcl
 tcl=await bool break case catch class const continue continuous default deffunc doOnce empty else ext false fetch finally float for foreach function if int integer isset let long namespace new null par prepContinuous return short spawn static string switch this throw true try typeof until var void while
