--- a/tools/forGeany/snippets.conf
+++ b/tools/forGeany/snippets.conf
@@ -1,9 +1,9 @@
 [funcSug]
-if={if [%cursor%]\n\t%cursor%\n}
-while={while [%cursor%]\n\t%cursor%\n}
-loop={while true\n\t%cursor%\n}
-do=%doOnce\n\t%cursor%\nuntil %cursor%
-short={short (%cursor%) `\n\t%cursor%\n`}
-def={deffunc %cursor% (%cursor%) `\n\t%cursor%\n`}
-seq={seq\n\t%cursor%\n}
-par={par\n\t%cursor%\n}
+if=if %cursor%:\n\t%cursor%\n
+while=while %cursor%:\n\t%cursor%\n
+loop=while true:\n\t%cursor%\n
+js=js (%cursor%):\n\t%cursor%\n
+def=def %cursor%(%cursor%):\n\t%cursor%\n
+seq=seq:\n\t%cursor%\n
+par=par:\n\t%cursor%\n
+match=match %cursor%:\n\tcase %cursor%:\n
